--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -5,7 +5,6 @@ div[class^=col]{
   /*padding-left: 5px;*/
 }
 
-/*.osnova { max-width: 1350px; margin:0 auto;}*/
 
 @font-face {
   font-family: 'Rubik_lg';
@@ -86,6 +85,25 @@ h1{
   margin-top: 19%;
   font-family: "Rubik-ext";
   font-size: min(max(40px, 5vw), 336%);
+}
+
+.my_btn{
+  width: 200px;
+  background-color: #e50e3a;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+}
+
+.my_btn:hover{
+  background-color: #c20428;
+}
+
+.my_btn:active{
+  background-color: #c20428;
 }
 
 .my_txt{
@@ -350,6 +368,7 @@ h1{
   text-align: right;
 }
 
+
 .mobile-nav-toggle i {
   margin: 18px 18px 0 0;
   color: #e50e3a;
@@ -533,10 +552,8 @@ h1{
     display: none;
   }
 }
-/*@media (max-width: 768px) and (min-width: 576px) {*/
-/*  .hover-text-one figure p {*/
-/*    font-size: 50%;*/
-/*  }*/
+
+
 @media screen and (max-width: 420px) {
   .my_center{
     display: none;
@@ -638,11 +655,12 @@ figure.effect-text-two:hover figcaption::before{
   font-size: 10px;
 }
 
-.btn.hvr-hollow:hover,.btn.hvr-hollow:focus,.btn.hvr-hollow:active {
+.btn.hvr-hollow:hover {
   background: white;
   box-shadow: inset 0 0 0 2px #e51739;
   color: black;
 }
+
 
 /*FLIP CARDS*/
 *, *:before, *:after {
@@ -722,7 +740,7 @@ figure.effect-text-two:hover figcaption::before{
 }
 .front {
   background-size: cover;
-  padding: 2rem;
+  padding: 1rem;
   font-size: 1.618rem;
   font-weight: 600;
   color: #f5f5f5;
@@ -741,20 +759,28 @@ figure.effect-text-two:hover figcaption::before{
   opacity: 0.25;
   z-index: -1;
 }
-.card:hover .front {
-  transform: rotateY(180deg);
+
+.back{
+  color: #000000;
+  font-size: 90%;
+  font-family: Rubik_rg;
 }
-.card:nth-child(even):hover .front {
-  transform: rotateY(-180deg);
+.back p{
+
 }
-.back {
-  background: #f5f5f5;
-  transform: rotateY(-180deg);
-  padding: 0 2em;
-}
-.card:hover .back {
-  transform: rotateY(0deg);
-}
+
+/*.card:hover .front{*/
+/*  transform: rotateY(180deg);*/
+/*}*/
+/*.back {*/
+/*  background: #f5f5f5;*/
+/*  transform: rotateY(-180deg);*/
+/*  padding: 0 2em;*/
+/*}*/
+/*.card:hover .back {*/
+/*  transform: rotateY(0deg);*/
+/*}*/
+
 
 
 /* Testimonials Section
