--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap CSS Filez -->
     <link href="{% static 'main/lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.min.js"></script>
     <!-- Libraries CSS Files -->
 
     <link href="{% static 'main/lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
@@ -17,22 +18,49 @@
     <link href="{% static 'main/lib/ionicons/css/ionicons.min.css' %}" rel="stylesheet">
     <link href="{% static 'main/lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     <link href="{% static 'main/lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
-    <!--    <link rel="stylesheet" href="https://bootstraptema.ru/snippets/effect/2016/ihe/effects.css">-->
-    <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <!-- Main Stylesheet File -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <link href="{% static 'main/css/style.css' %}" rel="stylesheet">
+
+
     <meta name="format-detection" content="telephone=no">
+
+    <script>
+        //Код jQuery, установливающий маску для ввода телефона элементу input
+        //1. После загрузки страницы,  когда все элементы будут доступны выполнить...
+        $(function(){
+            //2. Получить элемент, к которому необходимо добавить маску
+            $("#text_phone").mask("+7(999)999-99-99");
+            $("#text_phone_2").mask("+7(999)999-99-99");
+        });
+    </script>
+
+    <script>
+        function device(){
+            let detect = new MobileDetect(window.navigator.userAgent)
+            return detect.phone();
+        }
+    </script>
+
     <script>
             function call_request() {
                 var var_fname = $('#text_fname').val();
                 var var_phone = $('#text_phone').val();
                 var var_msg = $('#text_msg').val();
+
                 $.get('/main/save_request/', { fname: var_fname, phone: var_phone, msg: var_msg}, function( data )
                 {
+                    $('#text_fname').val();
+                    $('#text_fname').val(data.message);
+                    $('#text_phone').val();
+                    $('#text_phone').val(data.message);
                     $('#text_msg').val();
                     $('#text_msg').val(data.message);
                 }
@@ -118,8 +146,17 @@
                             <li><a href="#services">Услуги</a></li>
                             <li><a href="#team">Сотрудники</a></li>
                             <li><a href="#testimonials">Клиенты</a></li>
-                            <li><div class="my_href_b"><a href="tel:8 (910) 748-02-34" style="padding-left: 100px;">8 (910) 748-02-34</a></div></li>
-                            <li><div class="my_href_s"><a href="tel:8 (910) 748-02-34">8 (910) 748-02-34</a></div></li>
+                            <script>
+
+                                if (device() == null){
+                                    document.write('<li><div class="my_href_b"><a href="#" data-toggle="modal" data-target="#exampleModal_2">8 (910) 748-02-34</a></div></li>\n' +
+                                        '                                        <li><div class="my_href_s"><a class="mobile-nav-toggle" data-toggle="modal" data-target="#exampleModal_2" style="margin-left: 0px; padding-left: 0px; padding-right: 18%;">8 (910) 748-02-34</a></div></li>')
+                                }
+                                else {
+                                    document.write('<li><div class="my_href_b"><a href="tel:8 (910) 748-02-34" style="padding-left: 60px;">8 (910) 748-02-34</a></div></li>\n' +
+                                        '                                        <li><div class="my_href_s"><a href="tel:8 (910) 748-02-34">8 (910) 748-02-34</a></div></li>')
+                                }
+                            </script>
                         </ul>
                     </nav>
                 </div>
@@ -305,7 +342,7 @@
                             <figcaption>
                                 <h3>Персональная помощь<br>бизнес-ассистента под<br>ваш запрос</h3>
                                 <p>Возможно ваш бизнес уникален и<br>требует персонального подхода в<br>решении нестандартных задач.<br>Расскажите нам о них.<br>Мы подберем оптимальные варианты
-                                    <br> <a style="margin-top: 10px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                    <br><a data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-top: 10px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
                                 </p>
                             </figcaption>
                         </figure>
@@ -375,87 +412,103 @@
                 <div class="phone_zg" style="background: #f5f5f5">Наши сотрудники</div>
                 <p></p>
                 <div class="content_flip">
-                    <a class="card" href="#!">
+                    <a class="card" id="num_1" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC2991.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Екатерина</h2>
+                                <br>
+                                <p>Открытый, добрый, честный человек,<br> стремящийся узнавать что-то новое.<br>
+                                    Ответственно и своевременно<br> справляется с большим объёмом<br> работы.<br>
+                                    Сотрудник, сочетающий в себе<br> педантичный, упорядоченный склад<br> ума и качества творческого человека</p>
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="#!">
+                    <a class="card" id="num_2" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3204.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Надежда</h2>
+                                <br>
+                                <p>Главный бухгалтер, аналитик<br> эксперт в вопросах<br> налогообложения, бухгалтерского<br> учета.
+                                    Опыт работы в данном направлении 25 лет.<br>Поможет разобраться в сложных<br> вопросах.<br>
+                                    В свободное от работы время<br>занимается Aeroyoga.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="#!">
+                    <a class="card" id="num_3" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC2907.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Мария</h2>
+                                <br>
+                                <p>Яркая и целеустремлённая.<br>Любит порядок.<br>Ответственно относится к своим<br>
+                                    должностным поручениям.<br>Найдёт решение для любой<br> проблемы.<br>
+                                    Занимается саморазвитием,<br> осваивает новые навыки.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="#!">
+                    <a class="card" id="num_4" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3575.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Юлия</h2>
+                                <br>
+                                <p>Энергичная, позитивно мыслящая.<br>Умеет найти общий язык с любым клиентом.<br>
+                                    Готова сразу прийти на помощь, если что-то пошло не так.<br>
+                                    Постоянно улучшает свои<br> экспертные навыки в области<br> экономики и баскетбола.<br> Любит цифры.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="#!">
+                    <a class="card" id="num_5" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3426.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Катерина</h2>
+                                <br>
+                                <p>Наш юрист, которая подскажет,<br>как вести бизнес в рамках<br> правового поля,<br>
+                                    поможет в решение судебных тяжб.<br> Всегда в курсе последних<br> изменений в законодательстве.<br>
+                                    В свободное время воплощает в<br> жизнь свои творческие задумки.</p>
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="#!">
+                    <a class="card" id="num_6" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3156.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Татьяна</h2>
+                                <br>
+                                <p>Бухгалтер с профильным<br> образованием,<br> стаж работы более 8 лет.<br>
+                                    Имеет опыт консультанта по<br> программам 1С, ежегодно участвует<br>
+                                    в бухгалтерских конференциях.<br> Любит решать нестандартные<br>
+                                    задачи. Хобби-путешествия</p>
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="#!">
+                    <a class="card" id="num_7" href="#!">
                         <div class="front">
                             <img src="{% static 'main/img/DSC07232.png' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
-                                <h1>qwe</h1>
-                                <p>Consectetur adipisicing elit. Possimus, praesentium?</p>
-                                <p>Provident consectetur natus voluptatem quis tenetur sed beatae eius sint.</p>
+                                <h2>Елена</h2>
+                                <br>
+                                <p>Руководитель с активной<br> жизненной позицией.<br> Имеет опыт работы в<br>
+                                    налоговых органах.<br> Поддерживает взаимовыгодное<br>
+                                    сотрудничество с клиентами и<br> демократичный стиль работы в<br>
+                                    коллективе.<br> Хобби-спорт, путешествия, йога</p>
                             </div>
                         </div>
                     </a>
@@ -560,16 +613,16 @@
                         <h1 class="phone_zg text-center" style="margin-top: 0px; background: #f5f5f5"><span style="color: #e50e3a">Оставьте заявку</span></h1>
                         <h1 class="phone_wb text-center" style="margin-top: 0px; background: #f5f5f5">мы вам перезвоним </h1>
                         <div class="form-group">
-                            <textarea class="form-control" id="text_fname" style="margin-bottom: 5%; height: 64%;" rows="1" placeholder="Имя"></textarea>
+                            <input class="form-control"  id="text_fname" type="text" style="margin-bottom: 5%; height: 64%;" rows="1" placeholder="Имя">
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" id="text_phone" style="margin-bottom: 5%; height: 64%;" rows="1" placeholder="Телефон"></textarea>
+                            <input class="form-control"  id="text_phone" type="text" style="margin-bottom: 5%; height: 64%;" rows="1" placeholder="Телефон">
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" id="text_msg" style="margin-bottom: 5%; height: 114%;" rows="3" placeholder="Текст заявки"></textarea>
+                            <textarea class="form-control" id="text_msg" style="margin-bottom: 5%; height: 114%;" rows="3" placeholder="Текст обращения"></textarea>
                         </div>
                         <div class="d-grid gap-2 d-flex justify-content-end">
-                            <button onclick="call_request();" href="#!" style="width: 33.5%; max-width: 270px; border-top-width: 0; border-left-width: 0; border-bottom-width: 0; border-right-width: 0;" class="btn hvr-hollow btn-lg">Оставить заявку</button>
+                            <button type="button" onclick="call_request();" href="#!" style="width: 33.5%; max-width: 270px; border-top-width: 0; border-left-width: 0; border-bottom-width: 0; border-right-width: 0;" data-toggle="modal" data-target="#exampleModal" class="btn hvr-hollow btn-lg">Оставить заявку</button>
                         </div>
                     </form>
                 </div>
@@ -630,8 +683,50 @@
                 </div>
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Заявка отправлена</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    <div class="modal-body">
+                        <p>Ваша заявка отправлена, вскоре с вами свяжется специалист</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="exampleModal_2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel_2" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content" style="background-color: #f5f5f5">
+                    <div class="modal-header">
+                        <h5 style="font-family: Rubik-ext; color: #e50e3a;margin-left: auto;margin-right: auto;" class="modal-title" id="exampleModalLabel_2">Заказать звонок</h5>
+                    </div>
+
+                    <div class="modal-body" style="padding-left: 12%; padding-right: 12%;">
+                        <p class="text-center" style="margin-bottom: 10px; color: black">Ваше устройство не обладает такой функцией. <br> Оставьте контакты - мы вам перезвоним и ответим на все вопросы</p>
+                        <div class="form-group">
+                            <input class="form-control"  id="text_fname_2" type="text" style="margin-bottom: 5%; height: 64%;" rows="1" placeholder="Имя">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control"  id="text_phone_2" type="text" style="height: 64%;" rows="1" placeholder="Телефон">
+                        </div>
+                    </div>
+                        <div class="modal-footer">
+                            <button type="button" class="my_btn btn btn-secondary" data-dismiss="modal">Оставить заявку</button>
+                        </div>
+                </div>
+            </div>
+        </div>
     </section>
 </div>
+
+
 <!-- JavaScript Libraries -->
 <script src="{% static 'main/lib/jquery/jquery.min.js' %}"></script>
 <script src="{% static 'main/lib/easing/easing.min.js' %}"></script>
@@ -643,7 +738,8 @@
 
 <!-- Template Main Javascript File -->
 <script src="{% static 'main/js/main.js' %}"></script>
-<!--<script src="{% static 'main/js/device.js' %}"></script>-->
+<script src="{% static 'main/js/jquery.maskedinput.min.js' %}"></script>
+<script src="{% static 'main/js/device.js' %}"></script>
 
 </body>
 </html>
